--- a/index.html
+++ b/index.html
@@ -1,94 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flappy Bird</title>
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
-    }
-
-    canvas {
-      display: block;
-    }
-
-    button {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 10px 20px;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    #startButton {
-      top: 60%;
-    }
-
-    #retryButton,
-    #menuButton {
-      top: 60%;
-      display: none;
-    }
-
-    #menuButton {
-      top: 70%;
-    }
-
-    #settingsButton {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 16px;
-      padding: 5px 10px;
-      cursor: pointer;
-    }
-
-    .settings-dialog {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: #fff;
-      border: 1px solid #ccc;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      z-index: 1000;
-    }
-
-    .settings-dialog label {
-      display: block;
-      margin-bottom: 10px;
-    }
-
-    .settings-dialog button {
-      margin-top: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flappy Bird</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            font-family: Arial, sans-serif;
+        }
+        canvas {
+            display: block;
+        }
+        button {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px 20px;
+            font-size: 20px;
+            cursor: pointer;
+        }
+        #startButton {
+            top: 50%;
+        }
+        #settingsButton {
+            position: absolute;
+            top: 60%;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 16px;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+        #retryButton, #menuButton {
+            top: 60%;
+            display: none;
+        }
+        #menuButton {
+            top: 70%;
+        }
+        #settingsDialog {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: #fff;
+            border: 1px solid #ccc;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            z-index: 1000;
+        }
+        .settings-dialog label {
+            display: block;
+            margin-bottom: 10px;
+        }
+        .settings-dialog button {
+            margin-top: 10px;
+        }
+    </style>
 </head>
-
 <body>
-  <canvas id="gameCanvas"></canvas>
-  <button id="startButton">Start</button>
-  <button id="retryButton">Retry</button>
-  <button id="menuButton">Main Menu</button>
-  <button id="settingsButton">Settings</button>
-  <div class="settings-dialog" id="settingsDialog">
-    <label>
-      <input type="checkbox" id="toggleSounds" checked> Enable Sounds
-    </label>
-    <label>
-      Volume:
-      <input type="range" id="volumeControl" min="0" max="1" step="0.1" value="1">
-    </label>
-    <button id="closeSettings">Close</button>
-  </div>
-  <script src="game.js"></script>
+    <canvas id="gameCanvas"></canvas>
+    <button id="startButton">Start</button>
+    <button id="retryButton">Retry</button>
+    <button id="menuButton">Main Menu</button>
+    <button id="settingsButton">Settings</button>
+    <div class="settings-dialog" id="settingsDialog">
+        <label>
+            <input type="checkbox" id="toggleSounds" checked> Enable Sounds
+        </label>
+        <label>
+            Volume:
+            <input type="range" id="volumeControl" min="0" max="1" step="0.1" value="1">
+        </label>
+        <button id="closeSettings">Close</button>
+    </div>
+    <script src="game.js"></script>
 </body>
-
 </html>
