--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         }
         #settingsButton {
             position: absolute;
-            top: 60%;
+            top: calc(50% + 70px); /* Adjust top position based on your layout */
             left: 50%;
             transform: translateX(-50%);
             font-size: 16px;
             padding: 5px 10px;
             cursor: pointer;
+            display: none; /* Initially hide settings button */
         }
         #retryButton, #menuButton {
             top: 60%;
